--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,37 +1,41 @@
 name: Run Cypress Tests
 
 on:
-  pull_request:  # Runs Cypress tests on every pull request
+  pull_request:
     branches:
-      - master  # Change to your branch name if needed
-
-  push:  # Runs after code is merged into the main branch
+      - master
+  push:
     branches:
       - master
 
 jobs:
   cypress-run:
-    runs-on: ubuntu-latest  # Run on Ubuntu
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4  # Clones your repo into the workflow
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18  # Use the Node.js version your project requires
+          node-version: 18
 
       - name: Install Dependencies
-        run: npm install  # Installs project dependencies
+        run: npm install
+
+      - name: Start Application
+        run: npm start &  # Start the server in the background
+
+      - name: Wait for Application to be Ready
+        run: npx wait-on http://localhost:8000  # Wait until the server is running
 
       - name: Run Cypress Tests
         uses: cypress-io/github-action@v6
         with:
-          browser: chrome  # Runs Cypress tests in Chrome
-#          headless: true  # Runs in headless mode (change to false for debugging)
+          browser: chrome
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
         with:
           name: cypress-results
-          path: cypress/results/  # Save test results as artifacts
+          path: cypress/results/
