fix server issue1

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Start Application
         run: npm run start &  # Run server in background
 
-      - name: Wait for Application to be Ready
-        run: npx wait-on http://localhost:8000  # Wait until server is fully up
+#      - name: Wait for Application to be Ready
+#        run: npx wait-on http://localhost:8000  # Wait until server is fully up
 
       - name: Run Cypress Tests
         uses: cypress-io/github-action@v6
