--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -11,16 +11,6 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    services:
-      myapp:
-        image: your-docker-image:latest  # Replace with your actual image
-        ports:
-          - 8000:8000  # Map container port 8000 to runner port 8000
-        options: >-
-          --health-cmd "curl -f http://localhost:8000 || exit 1" 
-          --health-interval 5s 
-          --health-retries 20
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -33,14 +23,16 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Start Application
+        run: npm run-script       # Start the server in the background
+
       - name: Wait for Application to be Ready
-        run: npx wait-on http://localhost:8000 --timeout 60000
+        run:  npx wait-on http://localhost:8000 --timeout 60000 # Wait until the server is running
 
       - name: Run Cypress Tests
         uses: cypress-io/github-action@v6
         with:
           browser: chrome
-          wait-on: "http://localhost:8000"
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
