--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run",
     "test": "cypress run",
+    "start:test": "npm start & npx wait-on http://localhost:8000 && npm run test",
     "test:report": "cypress run --reporter mocha-junit-reporter"
 
   },
