--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -25,12 +25,14 @@ jobs:
 
       - name: Start Application
         run: |
-          ./start.sh &         # Start the server in the background
-          sleep 20      # Start the server in the background
+          ./start.sh &  # Start the server in the background
+          sleep 20      # Wait for the server to start
 
       - name: Verify Server is Running
         run: |
-          npx wait-on http://localhost:8000 || exit 1
+          curl --fail http://localhost:8000 || exit 1  # Ensure the server is running
+          npx wait-on http://localhost:8000 || exit 1  # Wait for the server to be accessible
+
       - name: Run Cypress Tests
         uses: cypress-io/github-action@v6
         with:
