--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -34,6 +34,7 @@ jobs:
         run: netstat -tlnp
       - name: Verify Server is Running
         run: |
+          npm start &
           curl --fail http://localhost:8000 || exit 1  # Ensure the server is running
           npx wait-on http://localhost:8000 || exit 1  # Wait for the server to be accessible
 
