--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -38,7 +38,7 @@ jobs:
 #        run: npx wait-on http://localhost:8000 --timeout 60000  # Wait up to 60s
 
       - name: Verify Server is Running
-        run: curl --fail http://localhost:8000 || (echo "Server did not start!" && exit 1)
+        run: curl --fail http://0.0.0.0:8000 || (echo "Server did not start!" && exit 1)
 
       - name: Display Server Logs (if failed)
         if: failure()
