--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -26,7 +26,7 @@ jobs:
           npm start > server.log 2>&1 &  # Start the server in the background
           sleep 5                         # Short wait to allow process to initialize
 
-      - name: Wait for the Server to be Ready
+#      - name: Wait for the Server to be Ready
 #        run: npx wait-on http://localhost:8000
 
       - name: Verify Server is Running
