--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -29,8 +29,8 @@ jobs:
 #      - name: Wait for the Server to be Ready
 #        run: npx wait-on http://localhost:8000
 
-      - name: Verify Server is Running
-        run: curl --fail http://localhost:8000
+#      - name: Verify Server is Running
+#        run: curl --fail http://localhost:8000
       - name: Run Cypress Tests
         uses: cypress-io/github-action@v6
         with:
