--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -35,6 +35,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           browser: chrome
+          headless : true
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
