--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -23,8 +23,9 @@ jobs:
 
       - name: Start Application
         run: |
-          npx cypress run
-          # Start the server in the background
+          npm start & npx wait-on http://localhost:8000 && npm run test
+          
+           # Start the server in the background
           sleep 5                         # Short wait to allow process to initialize
 
 #      - name: Wait for the Server to be Ready
