--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -23,11 +23,10 @@ jobs:
 
       - name: Start Application
         run: |
-          npm start &
-          npm run test
+          npx cypress open --config baseUrl=http://localhost:8000
           
            # Start the server in the background
-          sleep 5                         # Short wait to allow process to initialize
+#          sleep 5                         # Short wait to allow process to initialize
 
 #      - name: Wait for the Server to be Ready
 #        run: npx wait-on http://localhost:8000
