--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: cypress/included:latest
     container_name: cypress-tests
     networks:
-      - booking-challenge_default
+      - booking-challenge_default  # Ensure it's on the same network
     environment:
       - CYPRESS_baseUrl=http://booking-app:80
     volumes:
@@ -13,13 +13,13 @@ services:
     working_dir: /e2e
 
   booking-app:
-    image: your-app-image
+    image: nginx:alpine
     container_name: booking-app
     networks:
-      - booking-challenge_default
+      - booking-challenge_default  # Ensure it's on the same network
     ports:
       - "80:80"
 
 networks:
   booking-challenge_default:
-    driver: bridge
+    external: true  # Use an external network if it's already created, or you can remove this line and let Compose create it.
