--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -21,18 +21,10 @@ jobs:
       - name: Start application server
         run: npm start &
 
-      - name: Install Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl
-          sudo curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r .tag_name)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
-
       - name: Run Cypress tests in Docker
         run: |
           docker build -t cypress-tests .
-          docker-compose up cypress
+          docker run --rm cypress-tests
 
       - name: Upload Cypress test results (optional)
         if: always()
