--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Run Cypress tests in Docker
         run: |
-          docker build -t cypress-tests .
-          docker run --rm cypress-tests
+          npx cypress run --headless --browser chrome
+
 
       - name: Upload Cypress test results (optional)
         if: always()
