--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,7 +1,3 @@
-name: Cypress Tests
-
-on: [push, pull_request]  # Run tests on every push and pull request
-
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
@@ -19,16 +15,19 @@ jobs:
         run: npm install
 
       - name: Start application server
-        run: npm start &
+        run: npm start &  # Start your server in the background
 
-      - name: Run Cypress tests in Docker
+      - name: Wait for server to be ready
         run: |
-          npx cypress run --headless --browser chrome
+          for i in {1..30}; do
+            if curl --silent --fail http://localhost:8000; then
+              echo "Server is up!"
+              break
+            fi
+            echo "Waiting for server to start..."
+            sleep 10
+          done
 
-
-      - name: Upload Cypress test results (optional)
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: cypress-results
-          path: cypress/videos/
+      - name: Run Cypress tests
+        run: |
+          docker-compose up -d cypress
