--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,3 +1,7 @@
+name: Cypress Tests
+
+on: [push, pull_request]  # Run tests on every push and pull request
+
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
@@ -15,19 +19,16 @@ jobs:
         run: npm install
 
       - name: Start application server
-        run: npm start &  # Start your server in the background
+        run: npm start &
 
-      - name: Wait for server to be ready
+      - name: Run Cypress tests in Docker
         run: |
-          for i in {1..30}; do
-            if curl --silent --fail http://localhost:8000; then
-              echo "Server is up!"
-              break
-            fi
-            echo "Waiting for server to start..."
-            sleep 10
-          done
+          npm start & npx wait-on http://localhost:8000 && npm run test
 
-      - name: Run Cypress tests
-        run: |
-          docker-compose up -d cypress
+
+      - name: Upload Cypress test results (optional)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-results
+          path: cypress/videos/
