--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,12 +1,6 @@
-name: Run Cypress tests
+name: Cypress Tests
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+on: [push, pull_request]
 
 jobs:
   cypress-run:
@@ -25,17 +19,13 @@ jobs:
         run: npm install
 
       - name: Start application server
-        run: |
-          npm start &  # Start the server in the background
-          echo "Server starting... (waiting for server to be ready)"
+        run: npm start &
 
-      - name: Wait for server to be ready
-        run: |
-          npx wait-on http://host.docker.internal:8000 --timeout 60000 --interval 1000
-          echo "Server is up!"
+      - name: Wait for application to be ready
+        run: npx wait-on http://localhost:8000
 
       - name: Run Cypress tests
-        run: npm run test
+        run: npx cypress run --config baseUrl=http://localhost:8000
 
       - name: Upload Cypress test results (optional)
         if: always()
