--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,13 @@
 version: '3.8'
 
 services:
-  cypress:
-    image: cypress/included:latest
-    container_name: cypress-tests
-    networks:
-      - booking-challenge_default
-    environment:
-      - CYPRESS_baseUrl=http://booking-app:80
-    volumes:
-      - .:/e2e
-    working_dir: /e2e
-    depends_on:
-      - booking-app
-
   booking-app:
     image: nginx:alpine
     container_name: booking-app
-    networks:
-      - booking-challenge_default
     ports:
       - "8000:80"
+    networks:
+      - test-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:80"]
       interval: 10s
@@ -28,6 +15,21 @@ services:
       start_period: 30s
       timeout: 5s
 
+  cypress:
+    image: cypress/included:latest
+    container_name: cypress-tests
+    networks:
+      - test-network
+    environment:
+      - CYPRESS_baseUrl=http://booking-app:80
+    volumes:
+      - .:/e2e
+    working_dir: /e2e
+    depends_on:
+      booking-app:
+        condition: service_healthy
+    entrypoint: ["sh", "-c", "npm run test"]
+
 networks:
-  booking-challenge_default:
+  test-network:
     driver: bridge
