--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Start application server
         run: npm start &
 
-      - name: Wait for application to be ready
-        run: npx wait-on http://localhost:8000
+#      - name: Wait for application to be ready
+#        run: npx wait-on http://localhost:8000
 
       - name: Run Cypress tests
         run: npx cypress run --config baseUrl=http://localhost:8000
