--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -21,10 +21,9 @@ jobs:
       - name: Start application server
         run: npm start &
 
-      - name: Wait for application to be ready
+      - name: Run tests with Docker Compose
         run: |
-          echo "Waiting for server to be ready..."
-          npx wait-on http://localhost:8000 --timeout 60000
+          docker-compose up --exit-code-from cypress
 
       - name: Run Cypress tests
         run: npx cypress run --config baseUrl=http://localhost:8000
