--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -17,7 +17,10 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-
+      - name: Set up Docker Compose
+        run: |
+            sudo apt-get update
+            sudo apt-get install -y docker-compose
       - name: Start application server
         run: npm start &
 
