--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.8'
 
+networks:
+  test-network:  # Define the network here, do NOT use "external"
+    driver: bridge
+
 services:
   booking-app:
     image: nginx:alpine
@@ -25,11 +29,4 @@ services:
     volumes:
       - .:/e2e
     working_dir: /e2e
-    depends_on:
-      booking-app:
-        condition: service_healthy
-    entrypoint: ["sh", "-c", "npm run test"]
-
-networks:
-  test-network:
-    driver: bridge
+    entrypoint: ["sh", "-c", "until curl -s http://booking-app:80; do sleep 2; done && npm run test"]
