--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,7 +1,3 @@
-name: Cypress Tests
-
-on: [push, pull_request]
-
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
@@ -10,30 +6,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm install
-      - name: Set up Docker Compose
+      - name: Install Docker Compose
         run: |
-            sudo apt-get update
-            sudo apt-get install -y docker-compose
-      - name: Start application server
-        run: npm start &
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
 
-      - name: Run tests with Docker Compose
-        run: |
-          docker-compose up --exit-code-from cypress
-
-      - name: Run Cypress tests
-        run: npx cypress run --config baseUrl=http://localhost:8000
-
-      - name: Upload Cypress test results (optional)
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: cypress-results
-          path: cypress/videos/
+      - name: Start Services and Run Cypress
+        run: docker-compose up --exit-code-from cypress
