--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,17 +1,30 @@
-version: '3.8'
+networks:
+  test-network:  # ✅ Define the network explicitly
+    driver: bridge
 
 services:
+  booking-app:
+    image: nginx:alpine
+    container_name: booking-app
+    ports:
+      - "8000:80"
+    networks:
+      - test-network  # ✅ Use this network instead
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 5s
+
   cypress:
     image: cypress/included:latest
     container_name: cypress-tests
     networks:
-      - booking-challenge_default
+      - test-network  # ✅ Ensure Cypress is on the same network
     environment:
       - CYPRESS_baseUrl=http://booking-app:80
     volumes:
       - .:/e2e
     working_dir: /e2e
-
-networks:
-  booking-challenge_default:
-    external: true
+    entrypoint: ["sh", "-c", "until curl -s http://booking-app:80; do sleep 2; done && npm run test"]
