--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,4 +29,4 @@ services:
     volumes:
       - .:/e2e
     working_dir: /e2e
-    entrypoint: [ "sh", "-c", "until curl -s http://booking-app:80; do sleep 2; done && npm run test" ]
+#    entrypoint: [ "sh", "-c", "apk add --no-cache curl && until curl -s http://booking-app:80; do sleep 2; done && npm run test" ]
