--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Run Cypress tests
         run: npx cypress run --config baseUrl=http://localhost:8000
 
-      - name: Upload Cypress test results (optional)
+      - name: Upload Cypress test results
         if: always()
         uses: actions/upload-artifact@v4
         with:
