--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,3 +32,5 @@ services:
     volumes:
       - .:/e2e
     working_dir: /e2e
+    command: ["npx", "cypress", "run", "--config", "baseUrl=http://booking-app:80"]
+
