--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -27,4 +27,4 @@ services:
     volumes:
       - .:/e2e
     working_dir: /e2e
-    entrypoint: ["sh", "-c", "until curl -s http://booking-app:80; do sleep 2; done && npm run test"]
+    entrypoint: ["sh", "-c", "until curl -s http://localhost:8000; do sleep 2; done && npm run test"]
