--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,9 +28,9 @@ services:
     networks:
       - test-network  # Ensure cypress-tests is attached to test-network
     environment:
-      - CYPRESS_baseUrl=http://booking-app:80
+      - CYPRESS_baseUrl=http://localhost:8000
     volumes:
       - .:/e2e
     working_dir: /e2e
-    command: ["npx", "cypress", "run", "--config", "baseUrl=http://booking-app:80"]
+    command: ["npx", "cypress", "run", "--config", "baseUrl=http://localhost:8000"]
 
