--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ networks:
 services:
   booking-app:
     image: nginx:alpine
-#    container_name: booking-app
+    container_name: booking-app
     networks:
       - test-network  # Ensure booking-app is attached to test-network
     ports:
       - "8000:80"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000"]
       interval: 10s
       retries: 5
       start_period: 30s
