--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,20 @@ services:
   booking-app:
     image: nginx:alpine
     container_name: booking-app
-    networks:
-      - test-network  # Ensure booking-app is attached to test-network
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./php-fpm:/var/www/html
+    depends_on:
+      - booking-php-fpm
     ports:
       - "8000:80"
+
+  booking-php-fpm:
+    image: booking-challenge_php-fpm
+    container_name: booking-php-fpm
+    volumes:
+      - ./php-fpm:/var/www/html
+
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000"]
       interval: 10s
