--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,34 +6,31 @@ networks:
 
 services:
   booking-app:
-    build: .  # Assuming your app has a Dockerfile
+    image: nginx:alpine
     container_name: booking-app
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./php-fpm:/var/www/html
-    depends_on:
-      - booking-php-fpm
+    networks:
+      - test-network  # Ensure booking-app is attached to test-network
     ports:
       - "8000:80"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 5s
 
-  booking-php-fpm:
-    image: booking-challenge_php-fpm
-#    container_name: booking-php-fpm
-    volumes:
-      - ./php-fpm:/var/www/html
-    networks:
-      - test-network
-
-  cypress-tests:
+  cypress-tests:  # Updated service name to match Dockerfile
     build: .  # This ensures Cypress uses your custom Dockerfile
+#    container_name: cypress-tests
     depends_on:
-      - booking-app
+      booking-app:
+        condition: service_healthy  # Ensures Cypress waits for booking-app to be ready
     networks:
-      - test-network
+      - test-network  # Ensure cypress-tests is attached to test-network
     environment:
       - CYPRESS_baseUrl=http://booking-app:80
     volumes:
       - .:/e2e
     working_dir: /e2e
-    entrypoint: ["/bin/sh", "-c"]  # Change entrypoint to allow script execution
-    command: ["./start.sh && npx cypress run --config baseUrl=http://booking-app:80"]
+    command: ["npx", "cypress", "run", "--config", "baseUrl=http://booking-app:80"]
+
