--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -34,10 +34,10 @@ jobs:
       - name: Start application server
         run: npm start &
 
-      - name: Build and Start the Application
-        run: |
-            docker-compose up -d  # Start the app in detached mode
-            sleep 10  # Wait for the app to start
+#      - name: Build and Start the Application
+#        run: |
+#            docker-compose up -d  # Start the app in detached mode
+#            sleep 10  # Wait for the app to start
 
       - name: Test Application (Check if it's running)
         run: curl -f http://localhost:8000
