--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ networks:
 
 services:
   booking-app:
-#    image: nginx:alpine
-#    container_name: booking-app
+    build: .  # Ensures your application is built from the local Dockerfile
+    container_name: booking-app
     networks:
       - test-network  # Ensure booking-app is attached to test-network
     ports:
@@ -19,18 +19,16 @@ services:
       start_period: 30s
       timeout: 5s
 
-  cypress-tests:  # Updated service name to match Dockerfile
-    build: .  # This ensures Cypress uses your custom Dockerfile
-#    container_name: cypress-tests
+  cypress-tests:
+    build: .  # Ensures Cypress uses your custom Dockerfile
     depends_on:
       booking-app:
         condition: service_healthy  # Ensures Cypress waits for booking-app to be ready
     networks:
-      - test-network  # Ensure cypress-tests is attached to test-network
+      - test-network
     environment:
-      - CYPRESS_baseUrl=http://localhost:8000/
+      - CYPRESS_baseUrl=http://booking-app:80/
     volumes:
       - .:/e2e
     working_dir: /e2e
-    command: ["npx", "cypress", "run", "--config", "baseUrl=http://localhost:8000/"]
-
+    command: ["npx", "cypress", "run", "--config", "baseUrl=http://booking-app:80/"]
