--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -31,16 +31,19 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
-      - name: Start application server
-        run: npm start &
-
       - name: Build and Start the Application
         run: |
-            docker-compose up -d  # Start the app in detached mode
-            sleep 10  # Wait for the app to star  t
+          docker-compose up -d  # Start the app in detached mode
+          sleep 15  # Wait for the app to start
+
+      - name: Check Running Containers
+        run: docker ps  # Debugging step to ensure containers are running
 
       - name: Test Application (Check if it's running)
         run: curl -f http://localhost:8000
+
+      - name: Run Cypress Tests
+        run: docker-compose run cypress-tests  # Runs Cypress inside Docker
 
       - name: Upload Cypress test results
         if: always()
