--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -31,11 +31,11 @@ jobs:
 #          sudo apt-get update
 #          sudo apt-get install -y docker-compose
 
-#      - name: Build and Start the Application
-#        run: |
-#          docker-compose up -d  # Start the app in detached mode
-#          sleep 15  # Wait for the app to start
-#
+      - name: Build and Start the Application
+        run: |
+          docker-compose up -d  # Start the app in detached mode
+          sleep 15  # Wait for the app to start
+
 #      - name: Check Running Containers
 #        run: docker ps  # Debugging step to ensure containers are running
       - name: Debug Running Containers
